# betabear

./: .travis.yml  Cargo.toml  Readme.md  index.html  search-index.js
benches/: find_words.rs
betabear/: fn.build_with_letters.html  fn.search_for_words.html  index.html  sidebar-items.js
src/: lib.rs  main.rs
src/betabear/: lib.rs.html
