[package]
authors = ["Pascal Hertleif <killercup@gmail.com>"]
name = "betabear"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "Look for words that can be built with a list of given letters."
readme = "README.md"
repository = "https://github.com/killercup/betabear.git"
homepage = "https://github.com/killercup/betabear.git"

[dependencies]
regex = "0.1.48"
