[package]
authors = ["Pascal Hertleif <killercup@gmail.com>"]
name = "betabear"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "Look for words that can be built with a list of given letters."
readme = "README.md"
repository = "https://github.com/killercup/betabear.git"
homepage = "https://github.com/killercup/betabear.git"

[[bin]]
name = "betabear"
doc = false

[dev-dependencies]
regex = "0.1.48"

[features]
unstable = []
